# Cats-And-Dogs

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  notes.md  pyproject.toml
.github/workflows/: pre-commit.yml
cats-and-dogs/: constants.py  model.py  test.py  train.py  trainer.py
cats-and-dogs/lightning_logs/version_0/: metrics.csv
cats-and-dogs/lightning_logs/version_1/: metrics.csv
cats_and_dogs/: .gitignore  conv_model.py  dataset.py  infer.py  logger_selector.py  model.py  model_selector.py  test.py  train.py  trainer.py
cats_and_dogs/pl_modules/: data.py  infer.py  model.py  train.py
cats_and_dogs/pl_modules/mlruns/0/: meta.yaml
cats_and_dogs/pl_modules/mlruns/650495213884497453/: meta.yaml
cats_and_dogs/pl_modules/mlruns/650495213884497453/85479a23bacd42c3b2188e8ad0f0c7b9/: meta.yaml
cats_and_dogs/pl_modules/mlruns/650495213884497453/85479a23bacd42c3b2188e8ad0f0c7b9/metrics/: epoch  lr-Adam  train_loss  val_acc  val_loss
cats_and_dogs/pl_modules/mlruns/650495213884497453/85479a23bacd42c3b2188e8ad0f0c7b9/params/: model  test_path  (+1 more)
cats_and_dogs/scratch/: infer.py  train.py
conf/: config.yaml
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: .gitignore  test_labeled.dvc  train_11k.dvc  val.dvc
docs/: cats_and_dogs.rst  conf.py  conv_model.rst  index.rst  model_selector.rst  modules.rst
mlruns/0/: meta.yaml
mlruns/304612424858434274/: meta.yaml
mlruns/304612424858434274/091b8e1d0b3945068b29c287fbe9e2e7/: meta.yaml
mlruns/304612424858434274/091b8e1d0b3945068b29c287fbe9e2e7/metrics/: epoch  train_loss  val_acc  val_loss
mlruns/304612424858434274/091b8e1d0b3945068b29c287fbe9e2e7/tags/: mlflow.runName
mlruns/304612424858434274/d69e4f69322246dfbee8bb5d581f9631/: meta.yaml
mlruns/304612424858434274/d69e4f69322246dfbee8bb5d581f9631/metrics/: epoch  train_loss  val_acc  val_loss
mlruns/304612424858434274/f53d0e26e00142d79422e32ecb7d2207/: meta.yaml
mlruns/304612424858434274/f53d0e26e00142d79422e32ecb7d2207/metrics/: epoch  train_loss  val_acc  val_loss
mlruns/304612424858434274/f53d0e26e00142d79422e32ecb7d2207/tags/: mlflow.runName  mlflow.source.git.commit
notes/: docker.md  dvc.md  poetry.md  sphinx.md
scripts/: download_data.py  test.ipynb
(+14 files in other folders)
