[project]
name = "cats-and-dogs"
version = "0.1.0"
description = "MLOps repo example for cats and dogs classification task"
authors = [
    {name = "naumov-vladis naumov.vo@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
]
packages = [
    { include = "cats_and_dogs", from = "." }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
pre-commit = "^4.1.0"
sphinx = "8.1.3"
