[project]
name = "cats-and-dogs"
version = "0.1.0"
description = ""
authors = [
    {name = "naumov-vladis", email = "naumov-vladis@yandex.team"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [
    { include = "cats_and_dogs", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
pre-commit = "^4.1.0"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.5"
notebook = "^7.3.2"

[tool.poetry.dependencies]
somepytools = {git = "https://github.com/v-goncharenko/somepytools.git"}
pandas = {url = "https://files.pythonhosted.org/packages/9c/d6/9f8431bacc2e19dca897724cd097b1bb224a6ad5433784a44b587c7c13af/pandas-2.2.3.tar.gz"}
torch = "^2.6.0"
